--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "name": "@kierans777/crocks-ext",
   "version": "0.0.1",
   "description": "Utility functions for use with Crocks",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "Kieran Simpson",
-  "license": "MIT"
+  "license": "MIT",
+  "peerDependencies": {
+    "crocks": "^0.12.4"
+  },
+  "devDependencies": {
+    "crocks": "^0.12.4"
+  }
 }
