--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.1",
   "description": "Utility functions for use with Crocks",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "cpy --cwd=src --parents . ../build && cpy package*.json README.md LICENSE build",
+    "clean": "rimraf build",
+    "dist": "npm run clean && npm run test && npm run build",
+    "test": "mocha test/**/*.js"
   },
   "keywords": [],
   "author": "Kieran Simpson",
@@ -14,8 +17,10 @@
   "devDependencies": {
     "@types/mocha": "^8.2.2",
     "@types/node": "^14.14.36",
+    "cpy-cli": "^3.1.1",
     "crocks": "^0.12.4",
     "hamjest": "^3.7.2",
-    "mocha": "^9.0.1"
+    "mocha": "^9.0.1",
+    "rimraf": "^3.0.2"
   }
 }
