--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
       - name: NPM Build
         run: npm run dist:build
 
-      - name: Commit formating changes
+      - name: Commit formatting changes
         if: ${{ github.ref == 'refs/heads/main' }}
         run: |
           git add src/ test/ types/ || echo "No changes to stage"
@@ -45,11 +45,11 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-      - name: Tag
+      - name: Tag and Release
         if: ${{ github.ref == 'refs/heads/main' }}
         run: ./scripts/tag.sh
         env:
-          GH_AUTH_TOKEN: ${{ secrets.GH_AUTH_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Push changes
         if: ${{ github.ref == 'refs/heads/main' }}
