--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "@epistemology-factory/crocks-ext",
   "version": "0.0.17",
   "description": "Utility functions for use with Crocks",
+  "engines": {
+    "node": ">=12.22.0 <=18.13.x",
+    "npm": ">=8.x"
+  },
   "scripts": {
     "build": "cpy --cwd=src --parents . ../build && cpy package*.json README.md LICENSE build",
     "clean": "rimraf build",
