--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,6 +90,14 @@ jobs:
         with:
           token: ${{ secrets.NPM_TOKEN }}
 
+  tag:
+    runs-on: ubuntu-latest
+    if: ${{ github.ref == 'refs/heads/main' }}
+    needs: [ publish ]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
       - name: Tag
         id: tag
         uses: kierans/gh-action-tag-on-npm-version@master
