Fail if cache miss occurs.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,6 +71,7 @@ jobs:
         with:
           key: build-${{ env.SHA }}
           path: "build"
+          fail-on-cache-miss: true
 
       - name: Repackage
         run: |
